# wrf_hydro_nwm_public

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md
docs/: BUILD.rst  (+1 more)
src/: CMakeLists.txt  Makefile  README.build.md  compile_offline_NoahMP.sh
src/CPL/BMI_cpl/: CMakeLists.txt  README.md  bmi.f90  bmi.hxx  bmi_wrf_hydro_nwm.f90  bmi_wrf_hydro_nwm.py  bmi_wrf_hydro_nwm_bind_c.f90  bmi_wrf_hydro_nwm_bind_c_interface.f90  bmi_wrf_hydro_nwm_interface.f90  wrf_hydro_nwm_bmi_driver.cpp  wrf_hydro_nwm_bmi_driver.f90  wrf_hydro_nwm_bmi_driver.py
src/CPL/BMI_cpl/bmi_wrf_hydro_nwm/: __init__.py
src/CPL/BMI_cpl/bmi_wrf_hydro_nwm/bmi/: __init__.py
src/CPL/CESM_cpl/: Makefile
src/CPL/CESM_cpl/cime_config/: buildlib  buildnml  config_pes.xml  hydro.namelist.template  wrfhydro_namelist.py
src/CPL/CESM_cpl/nuopc/: Makefile  rof_comp_nuopc.F90  wrfhydro_nuopc_cap.F90  wrfhydro_nuopc_fields.F90  wrfhydro_nuopc_flags.F90  wrfhydro_nuopc_gluecode.F90  wrfhydro_nuopc_macros.F90
src/CPL/CLM_cpl/: README.md
src/CPL/CTSM_cpl/cime_config/: buildlib  buildnml  config_component.xml
src/CPL/MODFLOW_cpl/: CMakeLists.txt  README.md  bmi_modflow.f90  bmi_modflow_interface.f90  create_modflow_domain_decomposition.py  wrf_hydro_nwm_modflow6_driver.f90  wrf_hydro_nwm_modflow6_hello_world.f90
src/CPL/NUOPC_cpl/: CMakeLists.txt  Makefile  README.md  WRFHydro_ESMF_Extensions.F90  WRFHydro_ESMF_Logging.F90  WRFHydro_NUOPC_Cap.F90  WRFHydro_NUOPC_Domain.F90  WRFHydro_NUOPC_Fields.F90  WRFHydro_NUOPC_Flags.F90  WRFHydro_NUOPC_Gluecode.F90  WRFHydro_NUOPC_Time.F90  wrfhydro_nuopc_utils.F90
src/CPL/NUOPC_cpl/analysis/: create_fulldom_scrip.py
src/CPL/NUOPC_cpl/scripts/: change_init_start_date.sh
src/CPL/NoahMP_cpl/: hrldas_drv_HYDRO.F  module_hrldas_HYDRO.F
src/CPL/Noah_cpl/: module_hrldas_HYDRO.F
src/CPL/ctsm_cpl/: CMakeLists.txt  wrfhydro_esmf_extensions.F90  wrfhydro_nuopc_cap.F90  wrfhydro_nuopc_flags.F90  wrfhydro_nuopc_utils.F90
src/Data_Rec/: module_namelist.F  module_namelist.F90  module_namelist_inc.F  module_rt_inc.F  rt_include.inc
src/HYDRO_drv/: module_HYDRO_drv.F  module_HYDRO_drv.F90
src/IO/: netcdf_layer.f90
src/Land_models/: CMakeLists.txt
src/Land_models/NoahMP/: CMakeLists.txt
src/Land_models/NoahMP/IO_code/: CMakeLists.txt  module_NoahMP_hrldas_driver.F  module_hrldas_netcdf_io.F
src/Land_models/NoahMP/data_structures/: state.f90
src/Land_models/NoahMP/phys/: module_sf_noahmp_glacier.F  module_sf_noahmpdrv.F  module_sf_noahmplsm.F
src/Land_models/NoahMP/phys/surfex/: CMakeLists.txt  mode_snow3l.F  module_snowcro.F
src/Land_models/NoahMP_WRF_H/IO_code/: main_hrldas_driver.F  module_NoahMP_hrldas_driver.F  module_hrldas_netcdf_io.F
src/Land_models/NoahMP_WRF_H/Utility_routines/: CMakeLists.txt
src/MPP/: module_mpp_GWBUCKET.F  module_mpp_ReachLS.F  mpp_land.F  mpp_land.F90
src/OrchestratorLayer/: CMakeLists.txt  config.F90  config.f90
src/Routing/: CMakeLists.txt  Noah_distr_routing.F  Noah_distr_routing.F90  Noah_distr_routing_overland.F  Noah_distr_routing_overland.F90  Noah_distr_routing_subsurface.F  Noah_distr_routing_subsurface.F90  module_GW_baseflow.F  module_GW_baseflow.F90  module_HYDRO_io.F  module_HYDRO_io.F90  module_HYDRO_utils.F  module_HYDRO_utils.F90  module_NWM_io.F  module_NWM_io.F90  module_NWM_io_dict.F  module_NWM_io_dict.F90  module_RT.F  module_RT.F90  module_UDMAP.F  module_channel_routing.F  module_channel_routing.F90  module_lsm_forcing.F  module_lsm_forcing.F90  module_noah_chan_param_init_rt.F  module_reservoir_routing.F
src/Routing/Diversions/: module_diversions.F90
src/Routing/Reservoirs/: module_reservoir_read_timeslice_data.F90  module_reservoir_utilities.F90
src/Routing/Reservoirs/Persistence_Level_Pool_Hybrid/: module_persistence_levelpool_hybrid.F90  module_persistence_levelpool_hybrid_state.F
src/Routing/Reservoirs/RFC_Forecasts/: module_rfc_forecasts.F90  module_rfc_forecasts_properties.F90  module_rfc_forecasts_state.F90
src/bmi/: CMakeLists.txt  bmi_wrf_hydro_nwm.f90  bmi_wrf_hydro_nwm_interface.f90  wrf_hydro_model.f90  wrf_hydro_nwm_bmi_driver.f90
src/cmake-modules/: FindNetCDF.cmake  test-model.cmake
src/tools/: CMakeLists.txt  print_domain_decomposition.F90  wrf_hydro_decomposition.py  wrf_hydro_tools.F90  wrf_hydro_tools_bind_c.f90
src/tools/wrf_hydro_tools/: __init__.py
src/utils/: CMakeLists.txt  module_hydro_stop.F90
tests/ctests/: CMakeLists.txt  run_cmake_testcase.sh  run_dir_makefile.mk  setup_cmake_testcase.sh
tests/ctests/bmi/: CMakeLists.txt  wrf_hydro_bmi_get_input_output.f90  wrf_hydro_bmi_get_values.f90  wrf_hydro_bmi_get_var_grid.f90  wrf_hydro_bmi_init.f90  wrf_hydro_bmi_parallel_initialize.f90
trunk/NDHMS/CPL/NUOPC_cpl/: CMakeLists.txt  Makefile  WRFHydro_ESMF_Logging.F90  WRFHydro_NUOPC_Cap.F90  WRFHydro_NUOPC_Domain.F90  WRFHydro_NUOPC_Fields.F90  WRFHydro_NUOPC_Gluecode.F90  WRFHydro_NUOPC_Time.F90
trunk/NDHMS/Routing/Reservoirs/: CMakeLists.txt  module_reservoir_read_rfc_time_series_data.F  module_reservoir_unit_tests.F  module_reservoir_utilities.F  reservoir_tests.F  reservoir_tests_driver.F
trunk/NDHMS/Routing/Reservoirs/Level_Pool/: CMakeLists.txt
trunk/NDHMS/Routing/Reservoirs/Persistence_Level_Pool_Hybrid/: CMakeLists.txt  module_persistence_levelpool_hybrid_properties.F
trunk/NDHMS/Routing/Reservoirs/RFC_Forecasts/: CMakeLists.txt  module_rfc_forecasts_properties.F
trunk/NDHMS/unit/: CMakeLists.txt  README.md  example1.pf  example2.pf  unit_tests.f90
trunk/NDHMS/unit/IO/: CMakeLists.txt  io_parallel_test_1.pf  io_serial_test_1.pf
trunk/NDHMS/unit/Land_models/: CMakeLists.txt
trunk/NDHMS/unit/Land_models/NoahMP/: CMakeLists.txt
trunk/NDHMS/unit/MPP/: CMakeLists.txt  mpp_land_LR_test_1.pf  mpp_land_init_bug_1.pf  mpp_land_init_test_1.pf  mpp_land_init_test_2.pf  mpp_land_log_map2d_test_1.pf  mpp_land_par_ini_test_1.pf
trunk/NDHMS/unit/OrchestratorLayer/: CMakeLists.txt  config_test_1.pf  io_manager_test_1.pf  io_manager_test_2.pf
trunk/NDHMS/unit/utils/: CMakeLists.txt  hydro_stop_test_1.pf  version_test_1.pf
(+60 files in other folders)
